	  character display routine to display newlines within the line
	  (which should never occur under normal circumstances; they will
	  only be there if the line had nulls in it and was unsunder()ed
	  beforehand) as ^@'s. (DLR)
  do_help():
	- Add support for the handled keyboard escape sequences in the
	  help menu, as they are needed with some terminals (e.g. xterm
	  with TERM=ansi). (DLR)
- configure.ac: Added ms to ALL_LINGUAS (Jordi).
- THANKS:
	- Completed a bit (Jordi).
	- Fixed David Benbennick's email address (David Benbennick).
GNU nano 1.1.9 - 05/12/2002
- General:
	- Typos n misspellings all over the place (David Benbennick).
	- Allow --tiny and --multibuffer to cooperate (who the heck
	  would want this is beyond me but ;-).  Changes to 
	  configure.ac, global.c, ,  (David Benbennick).
	- Change to openfilestruct for multibuffer mode by DLR.
	  New functions nano.c:make_new_opennode(), free_openfilestruct(), 
	  delete_opennode(), unlink_opennode(), splice_opennode(),  
	  new struct openfilestruct in nano.h. 
	- Preliminary prepend code.  This may be a bad idea, but I've
	  been wanting it for awhile now and we'll see how bad it messes
	  everything up.  Changes to files.c:do_writeout(), write_file().
	  Fixes for O_CREAT & append compatibility by David Benbennick.
	- Change from read() and write() to file streams by Jay Carlson.
	  Allows OS to implement read and write ahead rather than making
	  us do it.  Hopefully merged properly.
	- More cleanups with DISABLE flags, better free_shortcutage and
	  free_toggle, and get rid of unnecessary variable decls with 
	  NANO_SMALL in shortcut_init() by David Benbennick.
	- Added "syntax" command to .nanorc file, to allow multiple 
	  syntaxes.  New function color.c:update_color(), calls in various
	  files.c places, syntaxtype struct, global variables syntaxes,
	  syntaxfile_regexp and synfilematches.  Global flag -Y ,--syntax
	  to specify the type on the command line, if there's no good 